Attrasktioner kommer fra databasen nu, men den skal laves om til et set eller map, fordi den printer bare det samme ud dobbelt hvergang siden loades.